# sdk-python

./: README.md  pyproject.toml
src/giantcontext/: __init__.py
tests/: __init__.py  test_sdk.py
