[project]
name = "giantcontext"
version = "1.68.0"
description = "Official Python SDK for the GiantContext API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GiantContext", email = "support@giantcontext.com" }]
keywords = ["giantcontext", "api", "sdk", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-testmon>=2.1.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://giantcontext.com"
Documentation = "https://docs.giantcontext.com"
Repository = "https://github.com/giantcontext/giantcontext-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giantcontext"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E101"]

[tool.ruff.format]
quote-style = "double"
